Style changes, adding tests

--- a/app/views/header.jade
+++ b/app/views/header.jade
@@ -13,15 +13,18 @@ header
       ul
         li: a.all(href='#/all', ng-class='{active: isActive("/all")}') 
           i.fa.fa-asterisk.fa-3x
-          span  All Tasks
+          i.fa.fa-asterisk.fa-2x
+          span.text  All Tasks
           span.count {{todos.length}}
         li: a.incomplete(href='#/incomplete', ng-class='{active: isActive("/incomplete")}')
           i.fa.fa-circle-o.fa-3x
-          span  Incomplete
+          i.fa.fa-circle-o.fa-2x
+          span.text  Incomplete
           span.count {{incompleteCount}}
         li: a.complete(href='#/complete', ng-class='{active: isActive("/complete")}')
           i.fa.fa-check-circle.fa-3x
-          span  Completed
+          i.fa.fa-check-circle.fa-2x
+          span.text  Completed
           span.count {{completeCount}}
   h1.title 
     i.fa.fa-check-circle-o
