--- a/sass/partials/_navigation.scss
+++ b/sass/partials/_navigation.scss
@@ -12,7 +12,7 @@
       background: lighten($nav-background-mobile, 5%);
     }
 
-    .fa {
+    .fa-bars {
       color: rgba(#000000, 0.5);
       line-height: 55px;
       transition: all ease-in-out 0.2s;
@@ -55,6 +55,7 @@ nav {
   .show-nav & {
     top: 55px;
   }
+
   
   @media(min-width: $bp-narrow-plus-1) {
     top: 0;
@@ -64,6 +65,10 @@ nav {
     box-shadow: 0 0 10px;
     padding-bottom: 0;
     background: darken($nav-background-mobile, 10%);
+
+    .show-nav & {
+      top: 55px;
+    }
   }
   
   ul {
@@ -88,7 +93,15 @@ nav {
       background: white;
       transition: all ease-in-out 0.2s;
       
-      span:not(.count) {
+      .fa-1x {
+        display: none;
+      }
+
+      .fa-3x {
+        display: inline;
+      }
+
+      span.text {
         display: none;
       }
 
@@ -130,7 +143,21 @@ nav {
       a {
         background: transparent;
 
-        span:not(.count) {
+        .fa-1x {
+          display: inline;
+        }
+
+        .fa-3x {
+          display: none;
+        }
+
+        span.count {
+          position: relative;
+          left: auto;
+          bottom: auto;
+        }
+
+        span.text {
           display: inline;
         }
       }
