--- a/sass/partials/_forms.scss
+++ b/sass/partials/_forms.scss
@@ -5,7 +5,8 @@ form.auth {
 
     .fa {
       position: absolute;
-      top: 0;
+      top: 13%;
+      left: 2%;
       color: $form-input-icon-color;
     }
   }
