--- a/app/views/header.jade
+++ b/app/views/header.jade
@@ -26,6 +26,9 @@ header
           i.fa.fa-check-circle.fa-1x
           span.text  Completed
           span.count {{completeCount}}
+        li.account: a.logout(href='/logout', title='Logout from Todoin\'')
+          i.fa.fa-sign-out
+          span  Logout
   h1.title 
     i.fa.fa-check-circle-o
     |  todoin'
