--- a/app/views/login.jade
+++ b/app/views/login.jade
@@ -8,10 +8,10 @@ block content
         span= ' ' + message.text
     form.auth(method='post' action='/login')
       label(for='email')
-        input(name='email', placeholder='Email')
+        input(name='email', placeholder='Email', type='email' required)
         i.fa.fa-at.fa-2x
       label(for='password')
-        input(type='password' name='password', placeholder='Password')
+        input(type='password' name='password', placeholder='Password' required)
         i.fa.fa-lock.fa-2x
       button.button login
       a.button.secondary(href='/signup') sign up
