--- a/sass/partials/_navigation.scss
+++ b/sass/partials/_navigation.scss
@@ -1,3 +1,13 @@
+%nav-anchor {
+  display: block;
+  position: relative;
+  text-decoration: none;
+  font-weight: bold;
+  text-transform: uppercase;
+  background: white;
+  transition: all ease-in-out 0.2s;
+}
+
 .go-to-nav {
   display: none;
   
@@ -73,8 +83,13 @@ nav {
   
   ul {
     margin: 0 auto;
-    
+    position: relative;
+
     @media(min-width: $bp-narrow-plus-1) {
+      max-width: 470px;
+    }
+    
+    @media(min-width: $bp-narrow-plus-2) {
       max-width: 550px;
     }
   }
@@ -84,14 +99,8 @@ nav {
     width: 33.333333333%;
 
     a {
-      display: block;
+      @extend %nav-anchor;
       padding: 6px 0;
-      position: relative;
-      text-decoration: none;
-      font-weight: bold;
-      text-transform: uppercase;
-      background: white;
-      transition: all ease-in-out 0.2s;
       
       .fa-1x {
         display: none;
@@ -160,6 +169,31 @@ nav {
         span.text {
           display: inline;
         }
+      }
+    }
+  }
+
+  li.account {
+    float: none;
+    width: 50px;
+    position: absolute;
+    right: -49px;
+
+    a {
+      padding: 11px 0px 12px;
+      @include nav-item-color($status-logout);
+
+      span {
+        display: none;
+      }
+    }
+
+    @media(min-width: $bp-narrow-plus-2) {
+      width: 100px;
+      right: -100px;
+
+      a span {
+        display: inline;
       }
     }
   }
